<resources>
    <string name="app_name">PopBalloon</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    
    <string name="level_label">Level:</string>
    <string name="score_label">Score:</string>
    <string name="max_number">99</string>
    <string name="play_game">Play</string>
    <string name="popping_pin">Popping Pin</string>
    <string name="high_score">High Score</string>


</resources>
