<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bartovapps.popballoon.MainActivity">


    <LinearLayout
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        
        <ImageButton
            android:id="@+id/pin1"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:tint="@color/pinColor"
            android:src="@drawable/pin"/>

        <ImageButton
            android:id="@+id/pin2"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:tint="@color/pinColor"
            android:src="@drawable/pin"/>

        <ImageButton
            android:id="@+id/pin3"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:tint="@color/pinColor"
            android:src="@drawable/pin"/>

        <ImageButton
            android:id="@+id/pin4"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:tint="@color/pinColor"
            android:src="@drawable/pin"/>

        <ImageButton
            android:id="@+id/pin5"
            android:layout_width="@dimen/pin_size"
            android:layout_height="@dimen/pin_size"
            android:contentDescription="@string/popping_pin"
            android:tint="@color/pinColor"
            android:src="@drawable/pin"/>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/lightGray">

        <Button
            android:id="@+id/go_button"
            style="?android:borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:text="@string/play_game" />

        <RelativeLayout
            android:id="@+id/status_display"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="8dp"
            android:layout_toEndOf="@+id/go_button"
            android:orientation="horizontal"
            tools:ignore="RelativeOverlap">

            <TextView
                android:id="@+id/score_display"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text="@string/max_number"
                android:textStyle="bold"
                android:layout_marginEnd="4dp"
                android:layout_alignParentEnd="true"
                android:textSize="@dimen/status_text_size"/>

            <TextView
                android:id="@+id/score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/score_label"
                android:textStyle="bold"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_toStartOf="@+id/score_display"
                android:textSize="@dimen/status_text_size"
                android:layout_alignParentTop="true" />

            <TextView
                android:id="@+id/level_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/max_number"
                android:textStyle="bold"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_toStartOf="@+id/score_label"
                android:textSize="@dimen/status_text_size"/>

            <TextView
                android:id="@+id/level_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/level_label"
                android:textStyle="bold"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_toStartOf="@+id/level_display"
                android:textSize="@dimen/status_text_size"/>

            <TextView
                android:id="@+id/high_score_display"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/max_number"
                android:textStyle="bold"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_toStartOf="@+id/level_label"
                android:textSize="@dimen/status_text_size"/>

            <TextView
                android:id="@+id/high_score_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/high_score"
                android:textStyle="bold"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                android:layout_toStartOf="@+id/high_score_display"
                android:textSize="@dimen/status_text_size"/>

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
